# rust-proxy

./: .gitignore  Cargo.toml  README.md  test.sh
crates/dns/: Cargo.toml
crates/dns/src/: lib.rs  main.rs
crates/dns/src/dns/: resolver.rs  utils.rs
crates/proxy/src/: connection.rs  http.rs  lib.rs  main.rs  socks.rs
crates/proxy/src/socks/: auth.rs  constant.rs  tunnel.rs
src/: config.rs  connection.rs  http.rs  lib.rs  main.rs  socks.rs  utils.rs
src/dns/: hosts.rs  mod.rs  utils.rs
src/socks/: auth.rs  constant.rs  tunnel.rs  utils.rs
