[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.10", features = ["derive"] }
